# WraithBound

./: .gitignore  CMakeLists.txt  README.md  setup.iss.in
.github/workflows/: c-cpp.yml  installer.yml
lib_math/: Math.h
lib_maths/: maths.h
lib_tile_level_loader/: LevelGenerator.cpp  LevelGenerator.h  LevelSystem.cpp  LevelSystem.h
res/levels/: maze.txt  room.txt  room_spawn.txt  tunnelH.txt  tunnelV.txt
src/: Entity.cpp  EntityManager.cpp  EntityManager.h  Main.h  MeleeMonster.cpp  MeleeMonster.h  Monster.cpp  Monster.h  Player.cpp  Player.h  main.cpp
src/Entities/: Entity.cpp  Entity.h  Projectile.cpp  Projectile.h
src/Entities/Enemies/: MeleeMonster.cpp  MeleeMonster.h  Monster.cpp  Monster.h
src/Entities/Player/: Player.cpp  Player.h
src/SceneManager/: SceneManager.cpp  SceneManager.h
src/Scenes/: GameOverScene.h  InGameScene.h  MainMenuScene.h  PauseScene.h  Scene.h  SettingsScene.h  VictoryScene.h
